Name:          Snake
Version:       1.0.0
Cabal-Version: >= 1.2
License:       BSD3
Synopsis:      A Snake multiplayer game
Homepage:      
Author:        gabrielamancio
Category:      Games
Build-type:    Simple

Executable Snake
  Build-Depends: base >= 4.6.0.1,
                 monad-loops >= 0.4.2.1,
                 ansi-terminal >= 0.5,
                 async >= 2.0.1.5,
                 random >= 1.0.1.1
  Main-Is:       Snake.hs
  Ghc-Options:   -Wall